@@ -17,3 +17,4 @@ Jannis Vajen - jvajen@gmail.com
 Erik Telepovský - erik.telepovsky@email.com
 Chris Wood - chris@wood.is
 Brent O'Connor - epicserve
+Steve Jalim
